--- a/web3db-docs/docs/db/deployment.mdx
+++ b/web3db-docs/docs/db/deployment.mdx
@@ -32,7 +32,7 @@ Before proceeding with the deployment, ensure that you have the following prereq
 2. Navigate to the root directory of the cloned/downloaded repository.
 
    ```bash
-   cd QueryAPIKernel
+   cd QueryAPI/QueryAPIKernel
 
    ```
 
